# webview

./: .gitignore  CMakeLists.txt  README.md  ReadMe.md  browser.ts  build.ts  build_atoms.c  build_output.txt  env.ts  host.cc  impl_report.txt  impl_report_v2.txt  impl_report_v3.txt  index.ts  mqjs-build  package.json  pty_test  pty_test.cc  result.txt  run_tests.sh  shell.ts  sqlite.ts  test_spawn  test_subprocess  test_subprocess.cc  test_targets.ts  test_transpiler.ts  webview.i
alloy/: CMakeLists.txt  cron_manager.cpp  cron_manager.hpp  cron_manager_linux.cpp  cron_manager_macos.mm  cron_manager_windows.cpp  cron_parser.cpp  cron_parser.hpp  executor_test.cpp  executor_wrapper.js  main.cpp  process_manager.cpp  process_manager.hpp  runtime.cpp  runtime.hpp  shell_builtins.cpp  shell_builtins.hpp  shell_glob.cpp  shell_interpreter.cpp  shell_interpreter.hpp  shell_lexer.cpp  shell_lexer.hpp  shell_parser.cpp  shell_parser.hpp  subprocess.cpp  subprocess.hpp
alloy/tests/: test_cron_parser.cpp  test_shell.cpp  test_spawn.cpp
alloyscript/: LICENSE
build_alloy/: .ninja_deps  .ninja_log  CMakeCache.txt  alloy_host  build.ninja  cmake_install.cmake
cmake/: internal.cmake  webview.cmake
core/: CMakeLists.txt
core/include/: mquickjs.h  webview.h
core/include/alloy/: api.h
core/include/alloy/detail/: backends.hh  component_base.hh  signal.hh
core/include/alloy/detail/backends/: cocoa_gui.hh  gtk_gui.hh  win32_gui.hh
core/include/alloy/detail/components/: accordion.hh  advanced.hh  badge.hh  button.hh  card.hh  checkbox.hh  chip.hh  codeeditor.hh  colorpicker.hh  combobox.hh  contextmenu.hh  datepicker.hh  dialog.hh  divider.hh  extras.hh  extras_2.hh  extras_3.hh  filedialog.hh  groupbox.hh  hstack.hh  icon.hh  image.hh  label.hh  layout_containers.hh  link.hh  listview.hh  menu.hh  menubar.hh  misc.hh  pickers.hh  popover.hh  progressbar.hh  radiobutton.hh  rating.hh  richtext.hh  scrollview.hh  separator.hh  slider.hh  spinner.hh  spinner_loading.hh  (+14 more)
core/include/alloy/detail/platform/windows/: theme_fluent.hh
core/include/alloy/engine/: cron.hh  engine_base.hh  secure_ipc.hh  sqlite.hh  subprocess.hh
core/include/alloy_gui/: api.h
core/include/alloy_gui/detail/: component.hh
core/include/alloy_gui/detail/backends/: cocoa_backend.hh  gtk_backend.hh
core/include/webview/: alloy.hh  alloy_bindings.hh  alloy_js.hh  api.h  c_api_impl.hh  meta.hh  meta_bindings.hh  meta_js.hh
core/include/webview/detail/: alloy_js.hh  alloy_process.hh  alloy_sqlite.hh  alloyscript_runtime.hh  base64.hh  cron.hh  engine_base.hh  meta_js.hh  sqlite.hh  sqlite_runtime.hh  stream_runtime.hh  subprocess.hh
core/include/webview/detail/backends/: cocoa_webkit.hh  gtk_webkitgtk.hh  win32_edge.hh
core/mquickjs/: cutils.h  dtoa.c  dtoa.h  list.h  mqjs_build.c  mqjs_stdlib.c  mquickjs.c  mquickjs.h  mquickjs_atom.h  mquickjs_build.h  mquickjs_opcode.h  mquickjs_priv.h
core/src/: alloy.cc  alloy_gui.cc  alloy_gui.cpp  compiler.cpp  signals.cpp  webview.cc
core/src/alloy_gui/: button.cc  dialog.cc  extra.cc  input.cc  label.cc  layout.cc  navigation.cc  selection.cc  signals.cc  window.cc
core/src/components/: accordion.cpp  badge.cpp  button.cpp  card.cpp  checkbox.cpp  chip.cpp  codeeditor.cpp  colorpicker.cpp  combobox.cpp  contextmenu.cpp  datepicker.cpp  dialog.cpp  divider.cpp  filedialog.cpp  groupbox.cpp  hstack.cpp  icon.cpp  image.cpp  label.cpp  link.cpp  listview.cpp  menu.cpp  menubar.cpp  popover.cpp  progressbar.cpp  radiobutton.cpp  rating.cpp  richtext.cpp  scrollview.cpp  separator.cpp  slider.cpp  spinner.cpp  spinner_loading.cpp  splitter.cpp  statusbar.cpp  switch.cpp  tabview.cpp  textarea.cpp  textfield.cpp  timepicker.cpp  (+6 more)
core/src/gui/: button.cc  checkbox.cc  combobox.cc  dialog.cc  groupbox.cc  image.cc  label.cc  layout.cc  listview.cc  menu.cc  others.cc  others2.cc  pickers.cc  progressbar.cc  radiobutton.cc  signals.cc  slider.cc  spinner.cc  splitter.cc  statusbar.cc  switch.cc  tabview.cc  textarea.cc  textfield.cc  toolbar.cc  treeview.cc  webview.cc  window.cc
core/src/mquickjs/: cutils.h  dtoa.h  list.h  mquickjs.c  mquickjs_build.h  mquickjs_opcode.h  mquickjs_priv.h  mquickjs_repl.c  mquickjs_stdlib.c  readline_tty.h
core/tests/: CMakeLists.txt  js_bridge_test.ts  spawn.test.ts
core/tests/src/: alloy_gui_tests.cc  alloy_tests.cc  meta_tests.cc  sqlite_tests.cc  unit_tests.cc
docs/: ARCHITECTURE.md  gui.md  webview.md
examples/: CMakeLists.txt  alloy_demo.cc  alloy_gui_demo.cc  alloy_runtime.cc  alloy_shell_test.cc  alloy_test.cc  basic.c  basic.cc  bind.c  bind.cc  gui.c  gui.cc  gui.ts  gui_demo.cc  gui_test.cc  meta_demo.cc  meta_runtime.cc  metascript_cron.cc  worker.js  worker.ts
examples/basic/: index.ts
examples/bind/: index.ts
metascript/: cron_parser.hh  runtime.hh
metascript/tests/: cron_test.cc  runtime_test.cc
scripts/: build.ts  build_alloy.ts  build_executable.ts  build_metascript.ts  create_repl.ts
scripts/amalgamate/: amalgamate.py
src/: bundle.c  crypto.c  crypto.h  file.ts  host.c  host.cpp  index.ts  repl.ts  runtime.ts  sqlite.ts  streams.ts  transpiler.ts
src/alloy/: binary.js  bindings.cpp  bindings.hpp  crypto.cpp  crypto.hpp  eval.cpp  eval.hpp  fs.cpp  fs.hpp  ipc.cpp  ipc.hpp  streams.cpp  streams.hpp  streams.js
src/alloyscript/: bridge.h  ipc.c  ipc.h  (+4 more)
tests/: alloy.test.ts  alloy_build.test.ts  alloy_runtime_test.cc  binary.test.ts  browser_api_proxy.test.ts  browser_target.test.ts  button.test.ts  checkbox.test.ts  combobox.test.ts  comprehensive.test.ts  e2e.test.ts  env.test.ts  file.test.ts  full_capacity.test.ts  gui.test.ts  gui_comprehensive.test.ts  gui_e2e.test.ts  hstack.test.ts  label.test.ts  layout.test.ts  listview.test.ts  node_target.test.ts  progressbar.test.ts  radiobutton.test.ts  refined.test.ts  repl.test.ts  scrollview.test.ts  secure_eval.test.ts  secure_ipc.test.ts  slider.test.ts  spawn.test.ts  spawn_full.test.ts  sqlite.test.ts  streams.test.ts  tabview.test.ts  textarea.test.ts  textfield.test.ts  transpiler.test.ts  treeview.test.ts  vstack.test.ts  (+2 more)
(+182 files in other folders)
